# GDAntiAliasing

./: CMakeLists.txt  LICENSE  README.md  build.bat  config.bat  dllmain.cpp
src/: mod.cpp  mod.hpp  offsets.hpp
src/utils/: base64.h
sub/gd/layers_scenes_transitions_nodes/: PlayLayer.h
sub/gd/level_nodes/: GJGameLevel.h
sub/gd/manager_nodes/: GJUserScore.h
